# NayFlash

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  catalog.json  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: catalog.rs  downloader.rs  flasher.rs  lib.rs  main.rs
src/components/: SplashScreen.tsx  StepIndicator.tsx
src/steps/: Download.tsx  Flash.tsx  Search.tsx
