[package]
name = "nayflash"
version = "1.0.0"
description = "NayFlash - Every OS journey begins here"
authors = ["NayFlash"]
edition = "2021"

[lib]
name = "nayflash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
